#+STARTUP: align fold nodlcheck hidestars oddeven lognotestate
#+TITLE: ORG-INFO.JS: Changes
#+AUTHOR: Sebastian Rose
#+EMAIL:
#+LANGUAGE: en
#+INFOJS_OPT: path:org-info.js
#+INFOJS_OPT: toc:nil localtoc:t view:info mouse:underline
#+INFOJS_OPT: up:http://orgmode.org/worg/
#+INFOJS_OPT: home:http://orgmode.org buttons:nil

* 2009-04-22

  + Choose the human-readable IDs for links by regexp again.
  + Fix the `g' command.
  + Fix: still support old section IDs.

* 2009-04-21 - Org-mode 6.26

  + New way to detect the IDs for sections. The script does not search for '#sec-'
    anymore. Instead, the new human readable IDs are used as well.

    To not break the old human readable IDs in anchors inside of headlines, those
    are still prefered.

  + org-info.js is now minified without obfuscation. This decreases the filesize
    by about 40%.


* 2009-03-04 Mi

  + Fixed title. Title was not displayed in info-view-mode.
  + Title above is now optiona. Append =\_title-above= to your view option, to
    always leave the title alone:
    =view:info\_title-above=

* 2009-03-03 Di

  Org-mode v. 6.23, commit a68eb4b1e64cbe6e495fdd2c1eaf8ae597bf8602, introduced
  a new <div> element around all the body's contents. You'll need at least the
  changes from today (org-info.js v. 0.1.0.1) from now on.

  org-info.js  v. 0.1.0.1 is backward compatible with elder versions of
  Org-modes export.

* 2009-02-01 So

  + Reuse the `ltoc' option for positioning the local toc. No local TOC stays
    the default. If a local TOC is shown, it's below the first text in a section
    by default. To display the local TOC above a sections text use

    : org_html_manager.set("LOCAL_TOC", "above");

* 2009-01-31 Sa

  + Fixed footnotes and back again.
  + You may now define, if the local TOC appears above or below the text of a
    section that preceeds the first subsection. Simply use something like this
    in the head of your HTML-files:

    : org_html_manager.set("LTOC_BEFORE_TEXT", "0");
