@@ -8,6 +8,14 @@
 #+INFOJS_OPT: up:http://orgmode.org/worg/
 #+INFOJS_OPT: home:http://orgmode.org buttons:nil
 
+
+* 2009-06-17
+
+  Manipulate the histories current location.
+  So if one clicks a link to an external file, the browser's `back' button will
+  bring the user back to the last section visited in the file.
+
+
 * 2009-04-22
 
   + Choose the human-readable IDs for links by regexp again.
